--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.asdoi.gymwen"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 100
-        versionName "1.0.0 Release"
+        versionCode 101
+        versionName "1.0.1 beta"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -42,11 +42,12 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation files('libs/commons-codec-1.13.jar')
-    implementation files('libs/jsoup-1.12.1.jar')
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation files('libs/picasso-2.71828-javadoc.jar')
     implementation 'saschpe.android:customtabs:2.0.0'
     implementation 'androidx.browser:browser:1.0.0'
     implementation "com.mikepenz:aboutlibraries:7.0.4"
+    implementation 'com.github.javiersantos:AppUpdater:2.7'
+    implementation 'org.jsoup:jsoup:1.12.1'
 }
