--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,17 +37,16 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.core:core:1.1.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation files('libs/commons-codec-1.13.jar')
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation files('libs/picasso-2.71828-javadoc.jar')
     implementation 'saschpe.android:customtabs:2.0.0'
     implementation 'androidx.browser:browser:1.0.0'
     implementation "com.mikepenz:aboutlibraries:7.0.4"
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'apache-codec:commons-codec:1.2'
 }
