--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ allprojects {
     }
 }
 
+def acraVersion = '5.1.3'
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
@@ -54,4 +56,12 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'apache-codec:commons-codec:1.2'
+    implementation 'com.balsikandar.android:crashreporter:1.1.0'
+    implementation "ch.acra:acra-mail:$acraVersion"
+    implementation "ch.acra:acra-dialog:$acraVersion"
+    implementation "ch.acra:acra-notification:$acraVersion"
+    implementation "ch.acra:acra-toast:$acraVersion"
+
 }
+
+
