--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,25 +10,24 @@
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
-        android:excludeFromRecents="true"
-        android:finishOnTaskLaunch="true"
         android:icon="@mipmap/gymlogo"
         android:label="@string/app_name"
-        android:launchMode="singleInstance"
-        android:process=":acra"
         android:roundIcon="@mipmap/gymlogo_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <receiver
+            android:name=".ButtonReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
 
         <activity
             android:name=".main.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -77,7 +76,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/vertretungsplan_widget_info" />
         </receiver>
-
         <receiver
             android:name=".BootReceiver"
             android:enabled="true"
