--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ allprojects {
     }
 }
 
-def acraVersion = '5.1.3'
+def acraVersion = '5.3.0'
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -64,4 +64,5 @@ dependencies {
     implementation 'io.github.tonnyl:whatsnew:0.1.2'
     implementation 'de.cketti.library.changelog:ckchangelog:1.2.2'
     implementation 'com.github.Commit451:ModalBottomSheetDialogFragment:1.1.0'
+    implementation 'ru.github.igla:ferriswheel:1.2'
 }
