--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.akaita.android:easylauncher:1.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +19,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven {url "https://jitpack.io"}
+        maven { url "https://jitpack.io" }
     }
 }
 
