--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         /*Android v4.1 alias "Jelly Bean"*/
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 101
-        versionName "1.0.1 beta"
+        versionCode 102
+        versionName "1.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
