--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+//        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -66,4 +67,6 @@ dependencies {
     implementation 'de.cketti.library.changelog:ckchangelog:1.2.2'
     implementation 'com.github.Commit451:ModalBottomSheetDialogFragment:1.1.0'
     implementation 'ru.github.igla:ferriswheel:1.2'
+//    implementation 'com.karumi:dexter:6.0.1'
+    implementation 'com.github.IamIsPra:Sheriff:1.0.0'
 }
