--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".main.LehrerlisteActivity"
+            android:label="@string/title_activity_leherliste"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".main.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name"
@@ -63,7 +67,6 @@
             android:name=".main.SettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_settings" />
-
 
         <receiver android:name=".widgets.VertretungsplanWidget">
             <intent-filter>
