--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,5 @@ dependencies {
     implementation 'com.github.Commit451:ModalBottomSheetDialogFragment:1.1.0'
     implementation 'ru.github.igla:ferriswheel:1.2'
     implementation 'com.github.IamIsPra:Sheriff:1.0.0'
+    implementation 'com.novoda:simple-chrome-custom-tabs:0.1.6'
 }
