--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url "http://dl.bintray.com/novoda/maven" }
     }
 }
 
