--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'saschpe.android:customtabs:2.0.0'
-    implementation 'androidx.browser:browser:1.0.0'
+    implementation 'androidx.browser:browser:1.2.0'
     implementation "com.mikepenz:aboutlibraries:7.0.4"
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'org.jsoup:jsoup:1.12.1'
@@ -65,8 +65,9 @@ dependencies {
     implementation "ch.acra:acra-notification:$acraVersion"
     implementation "ch.acra:acra-toast:$acraVersion"
     implementation 'de.cketti.library.changelog:ckchangelog:1.2.2'
-    implementation 'com.github.Commit451:ModalBottomSheetDialogFragment:1.1.0'
     implementation 'ru.github.igla:ferriswheel:1.2'
     implementation 'com.github.IamIsPra:Sheriff:1.0.0'
     implementation 'com.novoda:simple-chrome-custom-tabs:0.1.6'
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+    implementation 'android.arch.work:work-runtime:1.0.1'
 }
