--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
   ANDROID_SDK_TOOLS: "4333796"
 
 before_script:
-  - chmod +x get-updated-badge-info.sh
+  #  - chmod +x get-updated-badge-info.sh
   - apt-get --quiet update --yes
   - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
   - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
@@ -44,5 +44,5 @@ debugTests:
   script:
     - ./gradlew -Pci --console=plain :app:testDebug
 
-after_script:
-  - ./get-updated-badge-info.sh
+#after_script:
+#  - ./get-updated-badge-info.sh
