--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,17 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".main.activities.MainActivity"
+            android:name=".ui.main.activities.TabActivity"
+            android:label="@string/title_activity_tab"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.main.activities.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -30,16 +40,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".main.activities.SignInActivity"
+            android:name=".ui.main.activities.SignInActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_sign_in"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".main.activities.ImpressumActivity"
+            android:name=".ui.main.activities.ImpressumActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/impressum_headline" />
         <activity
-            android:name=".main.activities.WebsiteActivity"
+            android:name=".ui.main.activities.WebsiteActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -55,12 +65,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".main.activities.ChoiceActivity"
+            android:name=".ui.main.activities.ChoiceActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_choice"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".main.activities.SettingsActivity"
+            android:name=".ui.main.activities.SettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_settings" />
 
