--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.akaita.android.easylauncher'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.asdoi.gymwen"
         /*Android v4.1 alias "Jelly Bean"*/
         minSdkVersion 17
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode 105
         versionName "1.0.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -74,4 +74,5 @@ dependencies {
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'androidx.work:work-runtime:2.2.0'
     implementation "com.ahmedjazzar.rosetta:rosetta:1.0.1"
+    implementation 'com.github.zubairehman:AlarmManager:v1.2.0-alpha01'
 }
