--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'androidx.work:work-runtime:2.2.0'
     implementation "com.ahmedjazzar.rosetta:rosetta:1.0.1"
+    implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
 }
