--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         /*Android v4.1 alias "Jelly Bean"*/
         minSdkVersion 17
         targetSdkVersion 29
-        versionCode 110
-        versionName "1.1.0"
+        versionCode 109
+        versionName "1.0.9"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
 
@@ -57,9 +57,11 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'saschpe.android:customtabs:2.0.0'
     implementation 'androidx.browser:browser:1.2.0'
 
+    implementation "androidx.cardview:cardview:1.0.0"
+
+    implementation 'saschpe.android:customtabs:2.0.0'
     implementation "com.mikepenz:aboutlibraries:7.0.4"
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'org.jsoup:jsoup:1.12.1'
@@ -76,4 +78,7 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.3.0'
     implementation "com.ahmedjazzar.rosetta:rosetta:1.0.1"
     implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
+
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 }
