--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,15 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ui.main.activities.AboutActivity"
+            android:name=".ui.activities.AboutActivity"
             android:label="@string/title_activity_about"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".ui.main.activities.ProfileActivity"
+            android:name=".ui.activities.ProfileActivity"
             android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ui.main.activities.MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name"
             android:theme="@style/SplashTheme">
@@ -41,16 +41,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.main.activities.SignInActivity"
+            android:name=".ui.activities.SignInActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_sign_in"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ui.main.activities.ImpressumActivity"
+            android:name=".ui.activities.ImpressumActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/impressum_headline" />
         <activity
-            android:name=".ui.main.activities.WebsiteActivity"
+            android:name=".ui.activities.WebsiteActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -66,12 +66,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.main.activities.ChoiceActivity"
+            android:name=".ui.activities.ChoiceActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_choice"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ui.main.activities.SettingsActivity"
+            android:name=".ui.activities.SettingsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/title_activity_settings" />
 
