--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.asdoi.gymwen"
         /*Android v4.1 alias "Jelly Bean"*/
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 110
         versionName "1.1.0"
@@ -79,4 +79,7 @@ dependencies {
     implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
+    implementation 'com.thebluealliance:spectrum:0.7.1'
 }
