--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            multiDexKeepProguard file('multidex-config.pro')
         }
     }
     compileOptions {
@@ -33,7 +32,7 @@ android {
 
 allprojects {
     tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xlint:deprecation"
+//        options.compilerArgs << "-Xlint:deprecation"
     }
 }
 
@@ -86,4 +85,5 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
+    implementation 'com.github.kabouzeid:app-theme-helper:1.3.10'
 }
