adde no Internet Connection dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.asdoi.gymwen">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,6 +21,7 @@
         android:roundIcon="@mipmap/gymlogo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        tools:replace="android:theme"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.activities.AppIntroActivity"
