--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.2.0'
-    implementation 'androidx.navigation:navigation-ui:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment:2.2.1'
+    implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -60,8 +60,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.browser:browser:1.2.0'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'androidx.work:work-runtime:2.3.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.work:work-runtime:2.3.1'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'saschpe.android:customtabs:2.0.0'
@@ -86,4 +86,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
     implementation 'com.github.kabouzeid:app-theme-helper:1.3.10'
+    implementation 'am.appwise.components:NoInternetDialog:1.1.3'
 }
