--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,5 +86,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
     implementation 'com.github.kabouzeid:app-theme-helper:1.3.10'
-    implementation 'am.appwise.components:NoInternetDialog:1.1.3'
+    implementation 'com.github.Pradyuman7:ChocoBar:V1.0'
 }
