--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.akaita.android:easylauncher:1.3.1'
+        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.0.0-rc01"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
