--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,7 @@
                     </intent-filter>
                 </activity>-->
 
-        <receiver android:name=".widgets.VertretungsplanWidget">
+        <receiver android:name=".widgets.MyWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -137,7 +137,7 @@
         </provider>
 
         <service
-            android:name=".widgets.VertretungsplanWidgetService"
+            android:name=".widgets.StackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
