--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.akaita.android.easylauncher'
 apply plugin: 'com.mikepenz.aboutlibraries.plugin'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 
 android {
     compileSdkVersion 29
@@ -39,6 +42,7 @@ allprojects {
 }
 
 def acraVersion = '5.3.0'
+def kotlin_version = '1.3.30'
 
 dependencies {
     testImplementation 'junit:junit:4.12'
@@ -62,9 +66,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.browser:browser:1.2.0'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'androidx.work:work-runtime:2.3.1'
+    implementation 'androidx.work:work-runtime:2.3.2'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "androidx.core:core-ktx:1.2.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'saschpe.android:customtabs:2.0.0'
     implementation "com.mikepenz:aboutlibraries:7.0.4"
