--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.61'
     repositories {
         google()
         jcenter()
@@ -9,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.akaita.android:easylauncher:1.3.1'
         classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.0.0-rc01"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
