--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,13 @@ android {
         /*Android v4.1 alias "Jelly Bean"*/
         minSdkVersion 17
         targetSdkVersion 29
-        versionCode 111
-        versionName "1.1.1"
+        versionCode 112
+        versionName "1.1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
-        //strip other than english resources
+        //strip other than english,german resources
         resConfigs "en", "de"
     }
     buildTypes {
