added onclick intents and loading screen to substitution widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,7 +159,7 @@
         </provider>
 
         <service
-            android:name=".widgets.WidgetService"
+            android:name=".widgets.SubstitutionWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
         <service
             android:name=".services.NotificationTileService"
